Stop expand/collapse triggering multiple times per click. Re-order metadata. Style tweaks

--- a/app/assets/stylesheets/learning-paths.scss
+++ b/app/assets/stylesheets/learning-paths.scss
@@ -25,6 +25,14 @@
     cursor: pointer;
   }
 
+
+  .learning-path-topic-desc {
+    border-width: 0;
+    padding: 1em;
+    margin-bottom: 1em;
+    border-radius: 0;
+  }
+
   .learning-path-topic-contents {
     display: none;
   }
